css changes edit icon

--- a/src/app/components/productivity-dashboard/productivity-dashboard.component.html
+++ b/src/app/components/productivity-dashboard/productivity-dashboard.component.html
@@ -135,8 +135,8 @@
                 <td class="px-6 py-2 whitespace-nowrap text-sm text-gray-700 group relative">
                   {{ group.idleTimeConfiguration }}
                   <button (click)="openIdleConfigModal(group)"
-                    class="absolute space-x-2 ml-2 hidden group-hover:inline-block text-teal-400 hover:text-teal-600 transition-colors">
-                    <i class="fas fa-edit"></i>
+                    class="absolute space-x-2 ml-2 hidden group-hover:inline-block ">
+                    <i class="fas fa-edit text-teal-600"></i>
                   </button>
                 </td>
                 <td class="px-6 py-2 whitespace-nowrap text-center">
