edit popup css changes

--- a/src/app/components/productivity-dashboard/productivity-dashboard.component.html
+++ b/src/app/components/productivity-dashboard/productivity-dashboard.component.html
@@ -186,7 +186,7 @@
     </div>
   </div>
 
-  <div *ngIf="showEditGroupModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+  <div *ngIf="showEditGroupModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-start z-50 ps-10">
     <div class="bg-white rounded-lg p-6 w-96">
       <h3 class="text-lg font-medium mb-4">Edit Custom Group</h3>
       <input type="text" placeholder="Group name" [(ngModel)]="newGroupName"
