made 3 diff tabs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="app-container">
-      
       <app-productivity-dashboard></app-productivity-dashboard>
-      <!-- <router-outlet></router-outlet> -->
+      <router-outlet></router-outlet>
 </div>
