--- a/src/app/components/productivity-dashboard/productivity-dashboard.component.html
+++ b/src/app/components/productivity-dashboard/productivity-dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="min-h-screen bg-gray-50 flex">
   <!-- Collapsible Sidebar -->
-  <app-sidebar [sidebarItems]="sidebarItems1" (sidebarItemsUpdated)="sideBarClicked($event)" [clickedItem]="sidebarCurr"></app-sidebar>
+  <app-sidebar [sidebarItems]="sidebarItems1" (sidebarItemsUpdated)="sideBarClicked($event)"
+    [clickedItem]="sidebarCurr"></app-sidebar>
 
   <!-- Main Content -->
   <div class="flex-1 flex flex-col">
@@ -107,14 +108,15 @@
           </div>
         </div>
         <!-- Table -->
+        @if (this.groupTab) {
         <div class="flex-1 bg-white overflow-auto">
           <table class="w-full">
             <thead class="bg-gray-50 sticky top-0">
               <tr>
-                <th class="px-6 py-2 text-left text-sm font-medium text-gray-900">
+                <th class="px-6 py-2 text-left text-sm font-bold text-gray-900">
                   Application Group
                 </th>
-                <th class="px-6 py-2 text-left text-sm font-medium text-gray-900">
+                <th class="px-6 py-2 text-left text-sm font-bold text-gray-900">
                   Idle Time Configuration
                 </th>
                 <th colspan="2" class="px-6 py-2">
@@ -142,10 +144,8 @@
                 <td class="px-6 py-2 whitespace-nowrap text-center">
                   <button class="px-4 py-2 text-xs font-semibold rounded transition-colors border border-gray-400"
                     [class.bg-green-500]="group.isProductive" [class.text-white]="group.isProductive"
-                    
                     [class.hover:text-green-600]="!group.isProductive"
-                    [class.hover:border-green-600]="!group.isProductive"
-                    [class.text-gray-700]="!group.isProductive"  
+                    [class.hover:border-green-600]="!group.isProductive" [class.text-gray-700]="!group.isProductive"
                     (click)="toggleProductivity(group, true)">
                     PRODUCTIVE
                   </button>
@@ -153,11 +153,9 @@
                 <td class="px-6 py-2 whitespace-nowrap text-center">
                   <button class="px-4 py-2 text-xs font-semibold rounded transition-colors border border-gray-400"
                     [class.bg-[#ffa500]]="!group.isProductive" [class.text-white]="!group.isProductive"
-                    [class.hover:bg-[#ffa500]]="!group.isProductive" 
-                    [class.text-gray-700]="group.isProductive" 
+                    [class.hover:bg-[#ffa500]]="!group.isProductive" [class.text-gray-700]="group.isProductive"
                     [class.hover:border-[#ffa500]]="group.isProductive"
-                    [class.hover:text-[#ffa500]]="group.isProductive"
-                    (click)="toggleProductivity(group, false)">
+                    [class.hover:text-[#ffa500]]="group.isProductive" (click)="toggleProductivity(group, false)">
                     NON-PRODUCTIVE
                   </button>
                 </td>
@@ -165,6 +163,72 @@
             </tbody>
           </table>
         </div>
+        }
+        @if (this.teamTab) {
+        <div class="flex-1 bg-white overflow-auto">
+          <table class="w-full">
+            <thead class="bg-gray-50 sticky top-0">
+              <tr>
+                <th class="px-6 py-3 text-left text-sm font-bold text-gray-900">
+                  Team Name
+                </th>
+                <th class="px-6 py-3 text-left text-sm font-bold text-gray-900">
+                  Action
+                </th>
+
+              </tr>
+            </thead>
+
+            <tbody class="bg-white divide-y divide-gray-300">
+              <tr *ngFor="let group of filteredApplicationGroups; trackBy: trackByName" class="hover:bg-gray-50">
+                <td class="px-6 py-3 whitespace-nowrap text-sm font-normal text-gray-900">
+                  {{ group.name }}
+                </td>
+                <td class="px-6 py-3 whitespace-nowrap text-sm text-gray-700 group relative">
+
+                  <button (click)="openIdleConfigModal(group)" class="absolute space-x-2 ml-2 ">
+                    <i class="fas fa-edit text-teal-600"></i>
+                  </button>
+                </td>
+
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        }
+        @if (this.usersTabs) {
+        <div class="flex-1 bg-white overflow-auto">
+          <table class="w-full">
+            <thead class="bg-gray-50 sticky top-0">
+              <tr>
+                <th class="px-6 py-3 text-left text-sm font-bold text-gray-900">
+                  UserName
+                </th>
+                <th class="px-6 py-3 text-left text-sm font-bold text-gray-900">
+                  Action
+                </th>
+
+              </tr>
+            </thead>
+
+            <tbody class="bg-white divide-y divide-gray-300">
+              <tr *ngFor="let group of filteredApplicationGroups; trackBy: trackByName" class="hover:bg-gray-50">
+                <td class="px-6 py-3 whitespace-nowrap text-sm font-normal text-gray-900">
+                  {{ group.name }}
+                </td>
+                <td class="px-6 py-3 whitespace-nowrap text-sm text-gray-700 group relative">
+
+                  <button (click)="openIdleConfigModal(group)" class="absolute space-x-2 ml-2 ">
+                    <i class="fas fa-edit text-teal-600"></i>
+                  </button>
+                </td>
+
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        }
+
       </div>
     </div>
   </div>
@@ -186,7 +250,8 @@
     </div>
   </div>
 
-  <div *ngIf="showEditGroupModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-start z-50 ps-10">
+  <div *ngIf="showEditGroupModal"
+    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-start z-50 ps-10">
     <div class="bg-white rounded-lg p-6 w-96">
       <h3 class="text-lg font-medium mb-4">Edit Custom Group</h3>
       <input type="text" placeholder="Group name" [(ngModel)]="newGroupName"
