--- a/src/app/components/productivity-dashboard/productivity-dashboard.component.html
+++ b/src/app/components/productivity-dashboard/productivity-dashboard.component.html
@@ -131,7 +131,7 @@
 
             <tbody class="bg-white divide-y divide-gray-300">
               <tr *ngFor="let group of filteredApplicationGroups; trackBy: trackByName" class="hover:bg-gray-50">
-                <td class="px-6 py-2 whitespace-nowrap text-sm font-medium text-gray-900">
+                <td class="px-6 py-2 whitespace-nowrap text-sm font-normal text-gray-900">
                   {{ group.name }}
                 </td>
                 <td class="px-6 py-2 whitespace-nowrap text-sm text-gray-700 group relative">
