--- a/src/app/components/productivity-dashboard/productivity-dashboard.component.html
+++ b/src/app/components/productivity-dashboard/productivity-dashboard.component.html
@@ -167,7 +167,7 @@
         @if (this.teamTab) {
         <div class="flex-1 bg-white overflow-auto">
           <table class="w-full">
-            <thead class="bg-gray-50 sticky top-0">
+            <thead class="bg-[#e9f6f6] sticky top-0">
               <tr>
                 <th class="px-6 py-3 text-left text-sm font-bold text-gray-900">
                   Team Name
@@ -199,7 +199,7 @@
         @if (this.usersTabs) {
         <div class="flex-1 bg-white overflow-auto">
           <table class="w-full">
-            <thead class="bg-gray-50 sticky top-0">
+            <thead class="bg-[#e9f6f6] sticky top-0">
               <tr>
                 <th class="px-6 py-3 text-left text-sm font-bold text-gray-900">
                   User Name
