--- a/src/app/components/mapping/mapping.component.html
+++ b/src/app/components/mapping/mapping.component.html
@@ -7,8 +7,6 @@
                 class="px-3 py-2 border border-gray-300 rounded-sm focus:outline-none focus:none  focus:border-transparent">
         </div>
         <div class="grid grid-cols-1 lg:grid-cols-7 gap-4 mb-4">
-
-
             <!-- Is App Dropdown -->
             <div class="relative">
                 <label class="text-sm text-gray-600 isapp">Is App</label>
@@ -56,12 +54,12 @@
                 <i class="fas fa-chevron-down text-gray-400 pointer-events-none margin"></i>
             </div>
             <button (click)="addGroup()"
-                class="flex items-center gap-2 bg-teal-500 hover:bg-teal-600 text-white px-4 py-2 rounded-sm transition-colors duration-200 font-medium w-15 h-8">
+                class="flex items-center gap-2 bg-[#4cb2b2] hover:bg-[#4cb2b2] text-white px-4 py-2 rounded-sm transition-colors duration-200 font-medium w-15 h-8">
                 <i class="fas fa-plus"></i>
                 Add Group
             </button>
             <button (click)="addNewRule()"
-                class="flex items-center gap-2 bg-teal-500 hover:bg-teal-600 text-white px-4 py-2 rounded-sm transition-colors duration-200 font-medium w-15 h-8">
+                class="flex items-center gap-2 bg-[#4cb2b2] hover:bg-[#4cb2b2] text-white px-4 py-2 rounded-sm transition-colors duration-200 font-medium w-15 h-8">
                 <i class="fas fa-plus"></i>
                 Add new rule
             </button>
