--- a/src/app/components/productivity-dashboard/productivity-dashboard.component.html
+++ b/src/app/components/productivity-dashboard/productivity-dashboard.component.html
@@ -140,7 +140,7 @@
                 </td>
                 <td class="px-6 py-2 whitespace-nowrap text-sm text-gray-700 group relative">
                   {{ group.idleTimeConfiguration }}
-                  <button (click)="editCustomGroup(group)"
+                  <button (click)="openIdleConfigModal(group)"
                     class="absolute space-x-2 ml-2 hidden group-hover:inline-block ">
                     <i class="fas fa-edit text-teal-600"></i>
                   </button>
